src/objects/Partner_Program_Membership__c.object
<CustomObject>
    <description>This custom object provides a window into partner program membership details.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>This relationship will allow the Partner Profile Object to join the Account Object.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Partner_Profiles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox for active or inactive</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BIP_Begin_Date__c</fullName>
        <label>BIP Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BIP_End_Date__c</fullName>
        <label>BIP End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BIP_Plan_Name__c</fullName>
        <label>BIP Plan Name</label>
        <picklist>
            <controllingField>BIP__c</controllingField>
            <picklistValues>
                <fullName>Development - Volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development - Competitive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BIP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Captures whether the Partner is on a Business Improvement Plan.</description>
        <label>BIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BO_Error__c</fullName>
        <label>BO Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Begin_Date__c</fullName>
        <description>Start date of the program.</description>
        <label>Begin Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Company_Geographical_Coverage_Areas__c</fullName>
        <label>Company Geographical Coverage Areas</label>
        <length>110</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Trading_Name__c</fullName>
        <label>Company Trading Name</label>
        <length>110</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Date the program membership ends.</description>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GSA_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate partners that are able to purchase via GSA Schedule.</description>
        <label>GSA Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HQ_Address__c</fullName>
        <label>HQ Address</label>
        <length>110</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Status__c</fullName>
        <description>Status of the current program membership</description>
        <label>Member Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Grace Period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Membership__c</fullName>
        <description>PF Membership number</description>
        <externalId>true</externalId>
        <label>Membership #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PF_Program_Type__c</fullName>
        <label>PF Program Type</label>
        <length>110</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <description>This field contains the partner name</description>
        <label>Partner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Profile__c</fullName>
        <description>This field creates a lookup relationship to the Partner Profile.</description>
        <label>Partner Profile</label>
        <referenceTo>Partner_Profile__c</referenceTo>
        <relationshipLabel>Partner Program Memberships</relationshipLabel>
        <relationshipName>Partner_Program_Memberships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Tier__c</fullName>
        <description>Signifies the partner tier level (Advanced, Associate, etc..)</description>
        <label>Partner Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorised Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor BARCODE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor CARDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISV Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISV Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISV Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISV Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LACA - ZASP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Workforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Classified Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAX Authorized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAX Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print and Apply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFID - North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFID Enablement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFID Solutions Provider</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <description>Signifies the type (ex. reseller) of account.</description>
        <label>Partner Type</label>
        <picklist>
            <picklistValues>
                <fullName>Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IHV Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISV Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IZASP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kiosk Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFID Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security Card Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplies Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZASP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_Category__c</fullName>
        <description>Indicates the Program Track (Main, etc..)</description>
        <label>Program Category</label>
        <picklist>
            <picklistValues>
                <fullName>Main Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-Track</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <description>This field contains the PartnersFirst Program Name</description>
        <label>Program Name</label>
        <picklist>
            <picklistValues>
                <fullName>Access Partner - EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Partner - EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC Advanced Card Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC Advanced Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC Associate Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC Authorised Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC Authorised Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC Card Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC Card Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC Card Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC ISV Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC ISV Partner Subtrack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC Kiosk Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC Master Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC Pax Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC Platinum Premier Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC Premier Card Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC Premier Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC RFID Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC Supplies Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC ZASP Barcode Printers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC ZASP Barcode Printers Indirect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC ZASP Card Printers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC ZASP Mobile Printers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC ZASP Print Engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Partner - EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorised Card Distributor - EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorised Distributor - EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorised Distributor - SPA scheme - EMEA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewal_Begin_Date__c</fullName>
        <description>Date that the renewal period begins.</description>
        <label>Renewal Begin Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Renewal_End_Date__c</fullName>
        <description>Date the renewal period ends.</description>
        <label>Renewal End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Renewal_Ineligible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates whether this account is eligible for renewal</description>
        <label>Renewal Ineligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Period__c</fullName>
        <label>Renewal Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Partner Program Membership</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Membership__c</columns>
        <columns>Program_Name__c</columns>
        <columns>Member_Status__c</columns>
        <columns>Begin_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Partner_Tier__c</columns>
        <columns>Program_Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Partner Profile Program Membership</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Program Memberships</pluralLabel>
    <recordTypes>
        <fullName>Application_Specialist</fullName>
        <active>true</active>
        <description>Partner Application Specialist for Partner Community</description>
        <label>Application Specialist</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Reseller</fullName>
        <active>true</active>
        <description>Partner Resell for Partner Community</description>
        <label>Partner Reseller</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>